# moex-trading-gateway-rs

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
config/: finam-gateway-shadow.example.json  finam-gateway-shadow.vps.example.json  finam-imoexf-hybrid-paper-shadow.vps.example.json  finam-imoexf-ws-shadow-paper.vps.example.json  finam-ws-shadow.arm.example.json  finam-ws-shadow.vps.example.json  imoexf-hybrid-high180-profile.redacted.toml
crates/broker-cli/: Cargo.toml
crates/broker-cli/src/: main.rs
crates/broker-core/: Cargo.toml
crates/broker-finam/: Cargo.toml
crates/broker-finam/src/: dto.rs  instrument_registry.rs  lib.rs  mapper.rs  order_request.rs  ws.rs
crates/broker-finam/tests/fixtures/finam_spec/: order_contract_enums_v2026_07_03.json
crates/finam-gateway/: Cargo.toml
crates/finam-gateway/src/: lib.rs  m3d2_local_mock_endpoint.rs  m3d2_real_order_transport.rs  m3d2_real_transport_lifecycle.rs  real_order_endpoint.rs
crates/strategy-runtime-core/: Cargo.toml  source-correspondence.toml  stage5b2-source-correspondence.toml
crates/strategy-runtime-core/src/: hybrid_intraday_runtime.rs  lib.rs  runtime_compat.rs  stage5c_paper_host.rs  stage5d_persistence.rs
crates/strategy-runtime-core/src/hybrid_intraday/: high180.rs  intraday_breakout.rs  mean_reversion.rs  mod.rs  orchestrator.rs  risk_gate.rs  types.rs
crates/strategy-runtime-core/tests/: high180_profile_binding.rs  stage5b2_boundary_manifest.rs  stage5c_paper_host_admission.rs  wrapper_bracket_terminal_inventory.rs
docs/: active-orders-startup-policy.md  adr-runtime-compat-adapter-vs-source-migration.md  alor-parity-workplan-2026-07-07.md  alor-runtime-compat-contract-v1.md  architecture.md  broker-contract.md  current-status.md  finam-api-notes.md  finam-bar-finality-evidence-2026-06-30.md  finam-bar-finality-golden-test-plan.md  finam-readonly-fixtures.md  handoff.md  m2-to-m3-readiness-gate.md  m3-order-path-design.md  m3a10-sqlite-production-hardening.md  m3a11-final-pre-endpoint-gate.md  m3a6-execution-simulator-decisions.md  m3a8-reconciliation-state-matrix.md  m3a9-durable-store-prototype.md  m3b0-design-fixture-gate.md  m3b1-endpoint-response-integration-simulator.md  m3b10-readonly-fetcher-local-mock-transport.md  m3b11-real-readonly-transport-gate.md  m3b12-real-readonly-broker-truth-transport.md  m3b13-real-readonly-enable-runbook.md  m3b14-real-readonly-contract-probe-operator-harness.md  m3b15-real-readonly-pre-run-hardening.md  m3b16-real-readonly-contract-probe-evidence-gate.md  m3b17-real-readonly-evidence-package.md  m3b18-real-readonly-pre-evidence-gate.md  m3b19-real-readonly-request-bound-evidence-gate.md  m3b2-local-http-endpoint-mapper-hardening.md  m3b20-real-readonly-pre-run-freshness-gate.md  m3b21-real-readonly-operator-clock-gate.md  m3b22-real-readonly-evidence-package.md  m3b23-real-readonly-evidence-closeout.md  m3b24-m3c0-pre-order-readiness-closeout.md  m3b3-redacted-endpoint-result-status-policy.md  m3b4-mock-transport-boundary-hardening.md  m3b5-broker-truth-reconciliation-contract.md  (+159 more)
docs/adr/: adr-stage5d-exact-numeric-persistence.md  adr-stage5d-semantic-compatibility-policy.md
docs/stage-2b/: 2b-1-id-types-acceptance.md  2b-10-paper-mock-compatibility-test-pack.md  2b-1a-broker-order-id-hardening.md  2b-2-passive-dto-state-migration.md  2b-3-runtime-state-order-map-validation.md  2b-4-command-ack-order-trade-lifecycle-boundary.md  2b-4a-ack-status-policy-hardening.md  2b-5-runtime-caches-ownership-tracking.md  2b-5a-runtime-cache-ownership-attribution.md  2b-5b-broker-trade-id-invariant-hardening.md  2b-5c-broker-finam-trade-id-fallible-mapping.md  2b-6-trade-ledger-broker-neutral-migration.md  2b-6a-trade-ledger-blocker-dedup-hardening.md  2b-7-hybrid-runtime-owned-ids.md  2b-8-command-cancel-replace-dto-shape.md  2b-9-deterministic-request-id-stability.md  README.md
docs/stage-3/: 3a-market-data-parity-evidence-schema.md  3b-market-data-parity-comparator-contract.md  3c-redacted-market-data-parity-report-generator.md  3d-controlled-active-session-evidence-collection.md  3e-reconnect-gap-recovery-evidence.md
docs/stage-4/: 4a-broker-truth-bootstrap-evidence-schema.md  4b-existing-broker-truth-type-inventory.md  4c-validated-broker-truth-bootstrap.md  4d-finam-readonly-broker-truth-source-normalization.md  4e-runtime-bootstrap-application-evidence.md  4f-dirty-start-adoption-policy.md  4g-runtime-lifecycle-ordering-evidence.md  4h-paper-mock-runtime-bootstrap-integration-tests.md  4i-redacted-bootstrap-evidence-report.md  (+1 more)
scripts/: copy_review_baseline.py  forbidden_surface_negative_case_worker.sh  forbidden_surface_negative_harness.py  forbidden_surface_negative_harness.sh  forbidden_surface_scan.sh  handoff_provenance_negative_harness.py  handoff_safety_check.py  m3c_cancel_409_410_status_evidence.py  m3c_positive_get_order_waiver_package.py  m3c_pre_implementation_gate_package.py  m3c_release_profile_evidence.py  m3c_route_template_recheck_evidence.py  m3c_undocumented_2xx_status_evidence.py  m3d0_implementation_transition_decision.py  m3d1a_contract_alignment_evidence.py  m3d2a_local_mock_endpoint_evidence.py  m3d2b_strict_contract_evidence.py  m3d2c_real_transport_evidence.py  m3d2d_lifecycle_evidence.py  m3d2e_closure_evidence.py  m3d2f_firewall_evidence.py  m3e1_command_consumer_evidence.py  m3e2_command_lifecycle_evidence.py  m3e3_local_mock_endpoint_evidence.py  m3e3a_cancel_local_mock_endpoint_evidence.py  m3e4_redis_command_consumer_evidence.py  m3e_command_consumer_redis_smoke.sh  m3f1_reconciliation_contract_evidence.py  m3f2_reconciliation_outcome_policy_evidence.py  m3f3_snapshot_application_evidence.py  m3f4_reconciliation_runner_evidence.py  m3f4a_reconciliation_closure_evidence.py  m3g1_readiness_contract_evidence.py  m3g2_first_live_bar_gate_evidence.py  m3g3_broker_truth_stream_evidence.py  m3g3a_polling_fallback_watermark_evidence.py  m3g4_readiness_simulation_evidence.py  m3h1_runtime_shadow_adapter_evidence.py  m3h2_runtime_shadow_consumer_evidence.py  m3h2a_runtime_bar_ordering_evidence.py  (+108 more)
(+127 files in other folders)
