[package]
name = "broker-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
broker-finam = { path = "../broker-finam" }
chrono.workspace = true
clap = { workspace = true, features = ["env"] }
serde_json.workspace = true
tokio.workspace = true

[[bin]]
name = "broker-cli"
path = "src/main.rs"
