[package]
name = "broker-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
broker-core = { path = "../broker-core" }
broker-finam = { path = "../broker-finam" }
finam-gateway = { path = "../finam-gateway" }
chrono.workspace = true
clap = { workspace = true, features = ["env"] }
redis.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
uuid.workspace = true

[[bin]]
name = "broker-cli"
path = "src/main.rs"
