[package]
name = "finam-gateway"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
broker-core = { path = "../broker-core" }
broker-finam = { path = "../broker-finam" }
chrono.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
rust_decimal.workspace = true
uuid.workspace = true
