[package]
name = "strategy-runtime-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
broker-core = { path = "../broker-core" }
chrono.workspace = true
csv.workspace = true
rust_decimal.workspace = true
serde.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true
